# PriceScout.sg

./: AFFILIATE_SETUP_GUIDE.md  CNAME  HEARTBEAT.md  MEMORY.md  PUBLISHING.md  README.md  affiliate_catalog_TEMPLATE.json  air-purifiers-haze-singapore.html  air-purifiers-haze.html  air-purifiers.html  automatic-cat-feeders-singapore.html  car-jump-starters-singapore.html  dehumidifiers-singapore.html  dehumidifiers.html  generate_with_affiliate_links.py  index.html  methodology.html  monitor-arms-singapore.html  pet-water-fountains-singapore.html  portable-power-stations.html  privacy.html  private-label-products-pro.html  private-label-products-pro.json  private-label-products-v2.html  private-label-products-v2.json  private-label-products.html  private-label-products.md  private_label_products.json  robot-window-cleaners-singapore.html  styles.css  upcoming-trends-2026.html  upcoming_trends_2026.json  water-filter-pitchers-singapore.html  water-filters.html  water-flossers-cordless-singapore.html  water-flossers-singapore.html  water-flossers.html
.openclaw/: workspace-state.json
_templates/: product-comparison-template.html
comparisons/: index.html  mini-rice-cookers-singapore.html  (+4 more)
docs/: test.html
trend-intel/: INTEGRATION.md  README.md  cron-plan.md  pyproject.toml  requirements.txt
trend-intel/config/: scoring.yaml  sources.yaml
trend-intel/data/raw/: collect-20260324-071334.json
trend-intel/data/reports/: daily-20260324.json
trend-intel/db/: trendintel.sqlite
trend-intel/sql/: schema.sql
trend-intel/trend_intel/: cli.py  db.py  settings.py
(+51 files in other folders)
